--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello world
+<!doctype html>
+<html class="no-js" lang="">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>HSR 3.3 discussion</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+  <meta property="og:image:alt" content="">
+
+  <link rel="icon" href="/img/acheron_chibi_droite.webp">
+
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+<main class="flex justify-center bg-[url(/img/hsrbg.webp)] bg-no-repeat bg-cover">
+  <div class="min-h-screen w-[40%] mt-4 mb-4 rounded-lg p-4 bg-gradient-to-l from-slate-500 to-slate-200">
+      <h1 class="font-extrabold text-center">HHHHHH</h1>
+    <p class="text-justify pb-2">
+      Bien bien bien lorem ipsu adada mepad dauyeble idhetevffn rjzfiefkjf eozifzhifzf guzrugzugfuzf auifuafubafdbau iafubaufauf
+    </p>
+    <div class="flex justify-center">
+      <img src="/img/tlou.jpg" alt="" class="w-[85%]">
+    </div>
+  </div>
+</main>
+
+</body>
+
+</html>
