Continuation du contenu (partie théories) + ajout du contenu visuel

--- a/honkai/404.html
+++ b/honkai/404.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="icon" href="img/acheronerror.webp">
   <title>Page Not Found</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
@@ -36,6 +37,9 @@
       margin: 0 auto;
       width: 280px;
     }
+    img{
+      width: 20%;
+    }
 
     @media only screen and (max-width: 280px) {
 
@@ -54,8 +58,9 @@
 </head>
 
 <body>
-  <h1>Page Not Found</h1>
-  <p>Sorry, but the page you were trying to view does not exist.</p>
+  <img src="img/acheronerror.webp" alt="Acheron Error">
+  <h1>Page introuvable</h1>
+  <p>Désolé, la page que vous tentez d'accéder n'existe pas :(</p>
 </body>
 
 </html>
