--- a/honkai/index.html
+++ b/honkai/index.html
@@ -14,21 +14,112 @@
   <meta property="og:image" content="">
   <meta property="og:image:alt" content="">
 
-  <link rel="icon" href="/img/acheron_chibi_droite.webp">
+  <link rel="icon" href="img/acheron_chibi_droite.webp">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-<main class="flex justify-center bg-[url(/img/hsrbg.webp)] bg-no-repeat bg-cover">
-  <div class="min-h-screen w-[40%] mt-4 mb-4 rounded-lg p-4 bg-gradient-to-l from-slate-500 to-slate-200">
-      <h1 class="font-extrabold text-center">HHHHHH</h1>
+<main class="flex justify-center bg-[url(img/back.png)] bg-no-repeat bg-cover">
+  <div class="min-h-screen w-[50%] mt-4 mb-4 rounded-lg p-4 bg-gradient-to-l from-slate-500 to-slate-200">
+      <h1 class="font-extrabold text-center text-2xl pb-2">Star Rail 3.3 : résumé d'Amphoreus et théories futures</h1>
     <p class="text-justify pb-2">
-      Bien bien bien lorem ipsu adada mepad dauyeble idhetevffn rjzfiefkjf eozifzhifzf guzrugzugfuzf auifuafubafdbau iafubaufauf
+      Hello comme promis je vous propose de revenir sur la 3.3 de Star Rail : ce qu'on a vécu à Amphoreus jusqu'ici, ce que cette 3.3 nous apprend
+      et enfin mes théories sur la suite de l'histoire. Je comptais faire un thread mais vu que Twitter c'est pas ouf je vais utiliser mes connaissances
+      en web et je vous propose un format article.
     </p>
-    <div class="flex justify-center">
-      <img src="/img/tlou.jpg" alt="" class="w-[85%]">
+    <div class="flex justify-center pb-2">
+      <img src="img/hsr.webp" alt="" class="w-[85%]">
     </div>
+
+    <h2 class="font-extrabold text-xl pb-2" id="granddeux">1. <i>The Fall at Dawn's Rise</i> : La meilleure quête du jeu ?</h2>
+    <p class="text-justify pb-2">
+      Honnêtement je ne pensais pas vivre une telle quête sur Star Rail un jour. Je pense que l'auteur derrière Amphoreus a officiellement atteint le niveau qu'il proposait sur Honkai Impact.
+      Cette quête nous a fait passer par tant d'émotions : enthousiasme, hype, tristesse et peur à la fin. Le fight contre Aquila... J'AI MÊME PAS LES MOTS.... L'insert song, Hyacine qui réveille un pouvoir digne
+      des plus grands, le parallèle entre Phainon et Stelle nan vraiment le peak du peak. Je vous remets quand même cette cinématique qui me donne des frissons à chaque rewatch.
+    </p>
+    <video src="img/witness.mp4" controls></video>
+
+    <p class="text-justify pb-2">
+      Le symbolique derrière est juste trop beau, c'est le tout dernier titan avant la fin de la Chasse aux Flammes et c'est Hyacine, un personnage qu'on imaginait faible, qui vient à bout d'un des Titans les plus
+      dangereux, tout simplement une reine sur ce coup là. Ma princesse vraiment elle a sauvé tout le monde jusqu'à la fin...
+
+    </p>
+    <div class="flex justify-center pb-2">
+      <img src="img/hyacine.webp" alt="" class="w-[85%]">
+    </div>
+    <p class="text-justify pb-2">
+      <br>
+      Et même la suite, Cipher qui clutch absolument tout en révélant le plus grand mensonge de l'histoire qui a sauvé son monde pendant 700 ans, et qui en plus nous fait gagner un temps incroyable face au Flame Reaver
+      (bon je pense que s'il avait voulu l'éclater il l'aurait fait plus tôt mais bref). Et même la fin, Phainon qui s'apprête à prendre en main son destin au moment où Cyrene apparait pour la première fois. Je me demande
+      vraiment qui elle est ? Quelle importance elle a à l'échelle de la planète ? Peut être une émanatrice ? Un lien avec le souvenir si on prend en compte Mem ? Pour l'instant je me contenterai de dire qu'elle est MAGNIFIQUE
+    </p>
+    <div class="flex justify-center pb-2">
+      <img src="img/cyrene.webp" alt="" class="w-[85%]">
+    </div>
+    <p class="text-justify pb-2">
+      <br>
+      Bref je pense qu'on saura tout ça dans la prochaine version, toujours est-il que pour moi on est sur un <b>10/10 non négociable</b>. J'attendais vraiment que Amphoreus soit au niveau de Penacony et je pensais pas que
+      ça arriverait mais cette quête m'a redonné tout l'espoir que j'avais enfoui. On est clairement sur <i>presque</i> la meilleure quête du jeu. Le seul problème c'est les 1h30 de dialogues inutiles dans l'Oeil du Crépuscul,
+      heureusement on peut les skip. Mais à partir du combat c'est clairement un sans faute, on voit pas passer les 5h de quête et ça c'est vraiment appréciable ça change des versions précédentes. Je vais mettre
+      également un point très fort sur l'ambiance de la Ville Sainte après la mort de Cipher, la marée noire omniprésente avec le Flame Reaver qui apparaît et l'abondance de rouge comme couleur principale avec
+      les ost derrière ça m'a vraiment mis dans un mood de fou. On ressentait grave bien l'angoisse des personnages et la gravité de la situation... Plus personne à part nous, Phainon et Trinnon. Plus le choix : il faut
+      compléter la Chasse aux Flammes, mais ça attendra la 3.4.
+    </p>
+
+
+    <h2 class="font-extrabold text-xl pb-2">2. Et maintenant ? Théories et déductions</h2>
+    <p class="text-justify pb-2">
+      Aller maintenant je vais faire un tour de toutes les théories que j'ai vis à vis de Amphoreus pas seulement sur la 3.3 mais de manière générale, car là où cette quête apporte beaucoup d'éléments il y a aussi des
+      détails antérieurs sans réponse.
+    </p>
+
+    <h3 class="font-bold text-lg pb-2">2.1 March 7th : émanatrice du Souvenir</h3>
+    <p class="text-justify pb-2">
+      Vous vous souvenez de ce qu'a dit Oronyx lors de notre première rencontre après avoir sorti l'appareil photo ? Et maintenant Herta ajoute que "Black Swan [..] disait que la jeune pionnère congelée étant sans doute
+      piégée dans Amphoreus", j'ai plus aucun doute sur le fait que le passé de March soit lié à Amphoreus très fortement. Oronyx parle de "mère" car elle ressent l'énergie de Fuli à travers March ce qui peut ne signifier
+      qu'une chose c'est que March est une Emanatrice. Maintenant quel est son lien avec Amphoreus ? Une ancienne Héritière qui aurait réussi à s'échapper ? Piégée dans le corps de quelqu'un ? Une partie de moi a envie de croire
+      qu'elle a un lien avec Cyrene mais je pourrais pas plus élaborer sur ça.
+    </p>
+    <div class="flex justify-center pb-2">
+      <img src="img/oronyx.webp" alt="" class="w-[85%]">
+    </div>
+
+    <h3 class="font-bold text-lg pb-2">2.2 Le prochain Seigneur Ravageur</h3>
+    <p class="text-justify pb-2">
+      Ok là on a un gros morceau mais avant tout un peu de contexte : les Seigneurs Ravageurs aka les pires émanateurs de la destruction. En 3.2 Lygus mettait en garde Herta sur le fait qu'un Seigneur Ravageur
+      pourrait apparaitre si elle interférait avec Amphoreus, bah je pense qu'il a menti en réalité. Quoi qu'il se passe un Seigneur Ravageur naîtra et ce que Lygus voulait c'est ne pas avoir à gérer une puissance du
+      niveau de Herta qui pourrait empêcher sa naissance (je développerai ça <a href="#lygus" class="text-blue-600 underline">ici</a>)
+      <br>
+      Toujours est-il que lorsqu'on lis les bulles mémorielles à la fin de la quête Screwllum dit la chose suivante :
+    </p>
+    <div class="flex justify-center pb-2">
+      <img src="img/amphoreus.webp" alt="" class="w-[85%]">
+    </div>
+    <p class="text-justify pb-2">
+      Et ça c'est ce qu'on appelle une DINGUERIE, ça veut dire que l'unique objectif derrière l'existence d'amphoreus, l'essence même de l'existence de ce monde est d'assouvir la psychopathie de Rubert qui s'efforce
+      à amener la destruction dans des mondes. Pour vous dire, c'est un sceptre impérial qui est à l'origine de l'existence de Nanook, la destruction était allé tellement loin durant une expérience qu'il a fait
+      naître un Aeon. Donc non ce n'est pas à sous-estimer mdrr.
+      <br>
+      Maintenant qui ? Lygus lui même ? Non Lygus j'expliquerai après. Le Flame Reaver ? Non ça n'aurait pas de sens. Bon on l'a tous la réponse <b>Phainon</b>. C'est certain qu'il est le réceptacle ou même le futur
+      émanateur qui va arriver. Alors maintenant deux possibilités selon moi :
+    </p>
+    <ul class="list-decimal pl-6">
+      <li>Le système de cycle a été mis en place pour trouver <b>LE</b> bon récéptacle.</li>
+      <li>Le système de cycle existe pour que les descendants de Képhale fasse grandir la graine d'un Seigneur Ravageur, et cette croissance est arrivée à son terme, l'émanateur est prêt à voir le jour</li>
+    </ul>
+    <p class="text-justify pb-2">
+      Honnêtement je penche pour l'option 2, je pense que Phainon ne réalise pas ce qui l'attend et qu'il va devenir notre ennemi malgré lui.
+      <br>
+      Du coup avec tout ça on a que : Amphoreus est une simulation cachée hors de l'espace temps qui créé une planète en cycle qui a pour seul avenir la destruction, et à force de répéter cette destruction
+      le pouvoir du Seigneur Ravageur grandit jusqu'à éclore complètement. J'ai un pote qui disait "créer un émanateur à partir de celui qui est scellé" mais je pense plutôt que c'est un pouvoir qui grandit
+      au fur et à mesure des cycles et que cet émanateur enfermé que Lygus mentionnait n'était en réalité pas encore prêt.
+    </p>
+
+
+    <h3 class="font-bold text-lg pb-2" id="lygus">2.3 Lygus ou Rubert II : le véritable antagoniste ?</h3>
+    <h3 class="font-bold text-lg pb-2">2.4 Qui est le Flame Reaver / Voleur de flammes</h3>
+
   </div>
 </main>
 
