Complétion des théories supplémentaires + correction + médias ajoutés

--- a/honkai/index.html
+++ b/honkai/index.html
@@ -21,11 +21,11 @@
 
 <body>
 <main class="flex justify-center bg-[url(img/back.png)] bg-no-repeat bg-cover">
-  <div class="min-h-screen w-[50%] mt-4 mb-4 rounded-lg p-4 bg-gradient-to-l from-slate-500 to-slate-200">
-      <h1 class="font-extrabold text-center text-2xl pb-2">Star Rail 3.3 : résumé d'Amphoreus et théories futures</h1>
+  <div class="min-h-screen w-[50%] mt-4 mb-4 rounded-lg p-4 bg-gradient-to-l from-slate-400 to-slate-200">
+      <h1 class="font-extrabold text-center text-2xl pb-2">Star Rail 3.3 : avis et théories futures</h1>
     <p class="text-justify pb-2">
-      Hello comme promis je vous propose de revenir sur la 3.3 de Star Rail : ce qu'on a vécu à Amphoreus jusqu'ici, ce que cette 3.3 nous apprend
-      et enfin mes théories sur la suite de l'histoire. Je comptais faire un thread mais vu que Twitter c'est pas ouf je vais utiliser mes connaissances
+      Hello comme promis je vous propose de revenir sur la 3.3 de Star Rail : ce que cette 3.3 nous apprend
+      et mes théories sur la suite de l'histoire. Je comptais faire un thread mais vu que Twitter c'est pas ouf je vais utiliser mes connaissances
       en web et je vous propose un format article.
     </p>
     <div class="flex justify-center pb-2">
@@ -35,10 +35,11 @@
     <h2 class="font-extrabold text-xl pb-2" id="granddeux">1. <i>The Fall at Dawn's Rise</i> : La meilleure quête du jeu ?</h2>
     <p class="text-justify pb-2">
       Honnêtement je ne pensais pas vivre une telle quête sur Star Rail un jour. Je pense que l'auteur derrière Amphoreus a officiellement atteint le niveau qu'il proposait sur Honkai Impact.
-      Cette quête nous a fait passer par tant d'émotions : enthousiasme, hype, tristesse et peur à la fin. Le fight contre Aquila... J'AI MÊME PAS LES MOTS.... L'insert song, Hyacine qui réveille un pouvoir digne
+      Cette quête nous a fait passer par tant d'émotions : enthousiasme, hype, tristesse et peur à la fin. Oui peur, l'ost et les paroles de Lygus à la fin j'étais terrifié.
+      Le fight contre Aquila... J'AI MÊME PAS LES MOTS.... L'insert song, Hyacine qui réveille un pouvoir digne
       des plus grands, le parallèle entre Phainon et Stelle nan vraiment le peak du peak. Je vous remets quand même cette cinématique qui me donne des frissons à chaque rewatch.
     </p>
-    <video src="img/witness.mp4" controls></video>
+    <video src="img/witness.mp4" controls class="pb-2"></video>
 
     <p class="text-justify pb-2">
       Le symbolique derrière est juste trop beau, c'est le tout dernier titan avant la fin de la Chasse aux Flammes et c'est Hyacine, un personnage qu'on imaginait faible, qui vient à bout d'un des Titans les plus
@@ -52,7 +53,7 @@
       <br>
       Et même la suite, Cipher qui clutch absolument tout en révélant le plus grand mensonge de l'histoire qui a sauvé son monde pendant 700 ans, et qui en plus nous fait gagner un temps incroyable face au Flame Reaver
       (bon je pense que s'il avait voulu l'éclater il l'aurait fait plus tôt mais bref). Et même la fin, Phainon qui s'apprête à prendre en main son destin au moment où Cyrene apparait pour la première fois. Je me demande
-      vraiment qui elle est ? Quelle importance elle a à l'échelle de la planète ? Peut être une émanatrice ? Un lien avec le souvenir si on prend en compte Mem ? Pour l'instant je me contenterai de dire qu'elle est MAGNIFIQUE
+      vraiment qui elle est ? Quelle importance elle a à l'échelle de la planète ? Peut être une émanatrice ? Un lien avec le souvenir si on prend en compte Mem ? Pour l'instant je me contenterai de dire qu'elle est MAGNIFIQUE.
     </p>
     <div class="flex justify-center pb-2">
       <img src="img/cyrene.webp" alt="" class="w-[85%]">
@@ -60,10 +61,10 @@
     <p class="text-justify pb-2">
       <br>
       Bref je pense qu'on saura tout ça dans la prochaine version, toujours est-il que pour moi on est sur un <b>10/10 non négociable</b>. J'attendais vraiment que Amphoreus soit au niveau de Penacony et je pensais pas que
-      ça arriverait mais cette quête m'a redonné tout l'espoir que j'avais enfoui. On est clairement sur <i>presque</i> la meilleure quête du jeu. Le seul problème c'est les 1h30 de dialogues inutiles dans l'Oeil du Crépuscul,
+      ça arriverait mais cette quête m'a redonné tout l'espoir que j'avais enfoui. On est clairement sur <i>presque</i> la meilleure quête du jeu. Le seul problème c'est les 1h30 de dialogues inutiles dans l'Oeil du Crépuscule,
       heureusement on peut les skip. Mais à partir du combat c'est clairement un sans faute, on voit pas passer les 5h de quête et ça c'est vraiment appréciable ça change des versions précédentes. Je vais mettre
       également un point très fort sur l'ambiance de la Ville Sainte après la mort de Cipher, la marée noire omniprésente avec le Flame Reaver qui apparaît et l'abondance de rouge comme couleur principale avec
-      les ost derrière ça m'a vraiment mis dans un mood de fou. On ressentait grave bien l'angoisse des personnages et la gravité de la situation... Plus personne à part nous, Phainon et Trinnon. Plus le choix : il faut
+      les ost derrière ça m'a vraiment mis dans un mood de terreur. On ressentait grave bien l'angoisse des personnages et la gravité de la situation... Plus personne à part nous, Phainon et Trinnon. Plus le choix : il faut
       compléter la Chasse aux Flammes, mais ça attendra la 3.4.
     </p>
 
@@ -78,12 +79,22 @@
     <p class="text-justify pb-2">
       Vous vous souvenez de ce qu'a dit Oronyx lors de notre première rencontre après avoir sorti l'appareil photo ? Et maintenant Herta ajoute que "Black Swan [..] disait que la jeune pionnère congelée étant sans doute
       piégée dans Amphoreus", j'ai plus aucun doute sur le fait que le passé de March soit lié à Amphoreus très fortement. Oronyx parle de "mère" car elle ressent l'énergie de Fuli à travers March ce qui peut ne signifier
-      qu'une chose c'est que March est une Emanatrice. Maintenant quel est son lien avec Amphoreus ? Une ancienne Héritière qui aurait réussi à s'échapper ? Piégée dans le corps de quelqu'un ? Une partie de moi a envie de croire
-      qu'elle a un lien avec Cyrene mais je pourrais pas plus élaborer sur ça.
+      qu'une chose c'est que <b>March est une Émanatrice</b>.
     </p>
     <div class="flex justify-center pb-2">
       <img src="img/oronyx.webp" alt="" class="w-[85%]">
     </div>
+    <p class="text-justify pb-2">
+      Maintenant pour élaborer sur ça, je pense que March est fortement liée à Cyrene mais comment ? Je pense qu'en réalité c'est la "même personne". Plus précisément que March est un fragment que Cyrene a créé d'elle-même
+      et qu'elle a permis de s'échapper d'Amphoreus. On sait qu'il y a 3 émanateurs du coup : Lygus (Érudition), Phainon (Destruction) et Cyrene (Souvenir). Ce qui confirme bien ce que disait Herta concernant les
+      émanateurs d'Amphoreus. Et maintenant vous pourriez me dire "oui mais Cyrene est morte il y a des centaines d'années", sauf qu'on ne sait ni combien de temps March est resté dans son glaçon ni si le temps
+      s'écoule de la même manière sur Amphoreus. Surtout que là Cyrene est réapparu et étrangement c'est exactement quand March est proche de Amphoreus, donc est-ce que Cyrene ne se serait pas servi de l'énergie
+      du corps de March pour renaître ? Je pense que March était son plan B.
+      <br>
+      <br>
+      Et si vous doutez que March est une émanatrice sachez que March (et Sampo) sont les deux seuls personnages non émanateurs que le pistolet de la station Herta n'arrive pas à évaluer, tout comme Acheron qui elle
+      est vraiment une émanatrice.
+    </p>
 
     <h3 class="font-bold text-lg pb-2">2.2 Le prochain Seigneur Ravageur</h3>
     <p class="text-justify pb-2">
@@ -91,35 +102,134 @@
       pourrait apparaitre si elle interférait avec Amphoreus, bah je pense qu'il a menti en réalité. Quoi qu'il se passe un Seigneur Ravageur naîtra et ce que Lygus voulait c'est ne pas avoir à gérer une puissance du
       niveau de Herta qui pourrait empêcher sa naissance (je développerai ça <a href="#lygus" class="text-blue-600 underline">ici</a>)
       <br>
-      Toujours est-il que lorsqu'on lis les bulles mémorielles à la fin de la quête Screwllum dit la chose suivante :
+      Toujours est-il que lorsqu'on lis les bulles mémorielles, à la fin de la quête, Screwllum dit la chose suivante :
     </p>
     <div class="flex justify-center pb-2">
       <img src="img/amphoreus.webp" alt="" class="w-[85%]">
     </div>
     <p class="text-justify pb-2">
-      Et ça c'est ce qu'on appelle une DINGUERIE, ça veut dire que l'unique objectif derrière l'existence d'amphoreus, l'essence même de l'existence de ce monde est d'assouvir la psychopathie de Rubert qui s'efforce
+      Et ça c'est ce qu'on appelle une DINGUERIE, ça veut dire que l'unique objectif derrière l'existence d'Amphoreus, l'essence même de l'existence de ce monde est d'assouvir la psychopathie de Rubert qui s'efforce
       à amener la destruction dans des mondes. Pour vous dire, c'est un sceptre impérial qui est à l'origine de l'existence de Nanook, la destruction était allé tellement loin durant une expérience qu'il a fait
       naître un Aeon. Donc non ce n'est pas à sous-estimer mdrr.
       <br>
-      Maintenant qui ? Lygus lui même ? Non Lygus j'expliquerai après. Le Flame Reaver ? Non ça n'aurait pas de sens. Bon on l'a tous la réponse <b>Phainon</b>. C'est certain qu'il est le réceptacle ou même le futur
+      Maintenant qui ? Lygus lui même ? Non Lygus j'expliquerai après. Le Flame Reaver ? Non ça n'aurait pas de sens. Bon on l'a tous la réponse : <b>Phainon</b>. C'est certain qu'il est le réceptacle ou même le futur
       émanateur qui va arriver. Alors maintenant deux possibilités selon moi :
     </p>
-    <ul class="list-decimal pl-6">
+    <ul class="list-decimal pl-6 pb-1">
       <li>Le système de cycle a été mis en place pour trouver <b>LE</b> bon récéptacle.</li>
-      <li>Le système de cycle existe pour que les descendants de Képhale fasse grandir la graine d'un Seigneur Ravageur, et cette croissance est arrivée à son terme, l'émanateur est prêt à voir le jour</li>
+      <li>Le système de cycle existe pour que les descendants de Képhale fasse grandir la graine d'un Seigneur Ravageur, et cette croissance est arrivée à son terme, l'émanateur est prêt à voir le jour
+      et va utiliser le corps de Phainon pour ce-faire.</li>
     </ul>
     <p class="text-justify pb-2">
-      Honnêtement je penche pour l'option 2, je pense que Phainon ne réalise pas ce qui l'attend et qu'il va devenir notre ennemi malgré lui.
+      Honnêtement je penche pour l'option 2, je pense que Phainon ne réalise pas ce qui l'attend et qu'il va devenir notre ennemi malgré lui. Et j'appuierai cette théorie des paroles de Herta qui dit la chose suivante
+      en parlant de Kephale. (Petite note : ça peut aussi être que la boule que Képhale porte soit la prison du Seigneur Ravageur mais j'y crois mal pour moi ça reste le fait que Képhale représente le pouvoir grandissant
+      d'un émanateur).
+    </p>
+    <div class="flex justify-center pb-2">
+      <img src="img/kephale.webp" alt="" class="w-[85%]">
+    </div>
+    <p class="text-justify pb-2">
       <br>
-      Du coup avec tout ça on a que : Amphoreus est une simulation cachée hors de l'espace temps qui créé une planète en cycle qui a pour seul avenir la destruction, et à force de répéter cette destruction
-      le pouvoir du Seigneur Ravageur grandit jusqu'à éclore complètement. J'ai un pote qui disait "créer un émanateur à partir de celui qui est scellé" mais je pense plutôt que c'est un pouvoir qui grandit
-      au fur et à mesure des cycles et que cet émanateur enfermé que Lygus mentionnait n'était en réalité pas encore prêt.
+      Du coup avec tout ça on a que : Amphoreus est une simulation cachée (oui une simulation, à la fin de la quête les batiments redeviennent des illusions) hors de l'espace temps qui créé une planète de manière
+      cyclique qui a pour seul avenir la destruction, et à force de répéter cette destruction le pouvoir du Seigneur Ravageur grandit jusqu'à éclore complètement. J'ai un pote qui disait "créer un émanateur à
+      partir de celui qui est scellé" mais je pense plutôt que c'est un pouvoir qui grandit au fur et à mesure des cycles et que cet émanateur enfermé que Lygus mentionnait n'était en réalité pas encore prêt.
     </p>
 
 
     <h3 class="font-bold text-lg pb-2" id="lygus">2.3 Lygus ou Rubert II : le véritable antagoniste ?</h3>
-    <h3 class="font-bold text-lg pb-2">2.4 Qui est le Flame Reaver / Voleur de flammes</h3>
+    <p class="text-justify pb-2">
+      Rappellez-vous ces paroles de Screwllum <i>"Lygus pourrait être son opérateur... ou un autre Rubert"</i>, je pense qu'il nous a donné la clé de tout ça, et ça fait du sens. Lygus a avoué être un émanateur qui
+      a reçu <b>son</b> regard donc celui de Nous. Rubert était également un émanateur de l'Éruditon. Et la fin de cette quête nous montre que Lygus est intimement lié à la Chasse aux Flammes, il veut voir celle-ci
+      être complétée, il veut donc voir la naissance d'un Seigneur Ravageur.
+    </p>
+    <div class="flex justify-center pb-2">
+      <img src="img/lygus.webp" alt="" class="w-[85%]">
+    </div>
+    <p class="text-justify pb-2">
+      Il a assisté à tout, et il veut être témoin de la fin de cette épopée. C'est lui le cerveau derrière tout ça. Maintenant j'avoue ne pas réussir à interpréter sa dernière réplique, si vous avez une idée je suis
+      preneur. Par contre ce qui est sûr c'est que les génies semblaient chasser les sceptres (Screwllum et Herta disent en avoir détruits) donc si Lygus qui est aussi un émanateur de l'Érudition ne cherche pas à détruire
+      ce sceptre bien qu'il connait son existence c'est forcément qu'il est lié à Rubert. Il pourrait aussi très bien être une de ses créations et parler de lui ici :
+    </p>
+    <div class="flex justify-center pb-2">
+      <img src="img/nous.webp" alt="" class="w-[85%]">
+    </div>
 
+
+    <h3 class="font-bold text-lg pb-2">2.4 Qui est le Flame Reaver / Voleur de flammes</h3>
+    <p class="text-justify pb-2">
+      Beaucoup de théories pensent que le FR est une version de Phainon qui n'a pas réussi à sauver son monde, mais je ne pense pas. Ok j'ai deux théories en tête mais honnêtement on manque d'éléments pour que je
+      réussisse à clarifier cela.
+      <br>
+      <br>
+      1) Et si le FR était le plan B ? Ce que je veux dire c'est qu'il pourrait y avoir une autre entité qui a le pouvoir d'accueillir un éménateur. Si Phainon échoue, alors le FR s'en chargera et c'est
+      pourquoi il cherche toutes les flammes.
+      <br>
+      2) Le FR ne serait pas là pour arrêter Phainon mais pour le pousser à accomplir sa mission. Pendant la quête on panique car il nous poursuit mais est-ce qu'en réalité il n'essaierait pas de nous pousser à notre
+      objectif ? Il serait peut être celui qui s'assure que Phainon complète le cycle en devenant l'émanateur.
+      <br>
+      <br>
+      Et je me rends compte que ces deux options peuvent être liées : le FR peut avoir été introduit dans la simulation pour lui aussi chercher les flammes et ainsi pousser Phainon à réussir avant lui. Ou alors le FR
+      est carrément un ancier héritier de Képhale qui somehow s'est retrouvé dans un autre cycle. <br>
+      En revanche petite note : si le FR est le futur "mauvais" émanateur et que Phainon est le "bon" et qu'on se retrouve avec un Seigneur Ravageur qui est de notre côté je pleure devant les locaux de Hoyoverse. Mais
+      sur ce coup j'ai confiance je pense que qui qu'il soit, c'est Phainon qui héritera de ce pouvoir et qu'on va assister à la naissance d'un Seigneur Ravageur.
+    </p>
+
+    <h3 class="font-bold text-lg pb-2">2.5 Autres théories</h3>
+    <p class="text-justify pb-2">
+      Ok donc juste quelques théories qui me passent par la tête, rien de très élaboré mais j'ai bien envie de les citer
+      <br>
+      <b>Nous allons perdre ?</b>
+      <br>
+      Vous vous souvenez cette frame du premier trailer ? On sait aussi que dans les versions à venir on va faire face à Hysilens et Cerydra, d'anciennes héritières aujourd'hui décédées. Ce que j'en conclus c'est
+      qu'on va devoir réécrire l'histoire ou du moins se servir du passé pour sauver le futur. On a reçu le regard de Fuli et la flamme d'Oronyx donc j'interprète cette image comme si le Trailblazer allait réécrire
+      le monde entier à partir du souvenir. Et pourquoi ? Parce que la destruction aura gagné, Phainon serait trop puissant pour être arrêté et donc à l'aide de nos pouvoirs et du fait que Cyrene soit une
+      émanatrice du Souvenir on va changer/comprendre le passé pour gagner dans le futur. Et ça expliquerait pourquoi on verrait d'anciens héritiers chryséens.
+    </p>
+    <div class="flex justify-center pb-2">
+      <img src="img/passe.webp" alt="" class="w-[85%]">
+    </div>
+    <p class="text-justify pb-2">
+      Il y a aussi ces paroles de Phainon dans une de ses notes qui appui ma théorie, je pense que c'est un foreshadowing très peu subtil de Hoyoverse.
+    </p>
+    <div class="flex justify-center pb-2">
+      <img src="img/note.webp" alt="" class="w-[85%]">
+    </div>
+    <p class="text-justify pb-2">
+      <b>"Romantique" ?</b>
+      <br>
+      Ici petite note sur les dernières paroles de Cyrene, j'aimerais beaucoup connaître vos théories sur ce qu'elle dit ici. "Une histoire romantique", comment ça ? Ce que le futur nous annonce n'a rien de
+      romantique...
+    </p>
+    <div class="flex justify-center pb-2">
+      <img src="img/romantic.webp" alt="" class="w-[85%]">
+    </div>
+    <p class="text-justify pb-2">
+      <b>L'express au complet</b>
+      <br>
+      Bon ça c'est pas une surprise mais je pense que grâce à l'invention de Screwllum, une ancre qui marque la position d'Amphoreus, on va être au complet afin d'arrêter la menace qu'est la Destruction et potentiellement
+      mettre un terme à la simulation.
+      <br>
+      <br>
+      <b>Herta the goat</b>
+      <br>
+      Petit détail mais sachant que Herta a été énormément mise en avant : sortie en 3.0, elle est dans le trailer original, on l'a vu face à Nous, elle va jouer un rôle très important lors du combat que Amphoreus va
+      déclencher. Plus cette phrase vraiment quelle femme.
+    </p>
+    <div class="flex justify-center pb-2">
+      <img src="img/herta.webp" alt="" class="w-[85%]">
+    </div>
+    <hr>
+    <div class="flex justify-center pb-2">
+      <img src="img/merci.webp" alt="" class="w-[95%]">
+    </div>
+
+    <hr>
+    <div class="flex items-center gap-5">
+      <img src="img/pp.webp" alt="" class="rounded-full w-[10%]">
+      <div>
+        <p>Écrit par Tritryi</p>
+      </div>
+    </div>
   </div>
 </main>
 
