Relecture et finalisation

--- a/honkai/index.html
+++ b/honkai/index.html
@@ -43,7 +43,7 @@
 
     <p class="text-justify pb-2">
       Le symbolique derrière est juste trop beau, c'est le tout dernier titan avant la fin de la Chasse aux Flammes et c'est Hyacine, un personnage qu'on imaginait faible, qui vient à bout d'un des Titans les plus
-      dangereux, tout simplement une reine sur ce coup là. Ma princesse vraiment elle a sauvé tout le monde jusqu'à la fin...
+      dangereux, tout simplement une reine sur ce coup là. Quelle princesse vraiment elle a sauvé tout le monde jusqu'à la fin...
 
     </p>
     <div class="flex justify-center pb-2">
@@ -52,7 +52,7 @@
     <p class="text-justify pb-2">
       <br>
       Et même la suite, Cipher qui clutch absolument tout en révélant le plus grand mensonge de l'histoire qui a sauvé son monde pendant 700 ans, et qui en plus nous fait gagner un temps incroyable face au Flame Reaver
-      (bon je pense que s'il avait voulu l'éclater il l'aurait fait plus tôt mais bref). Et même la fin, Phainon qui s'apprête à prendre en main son destin au moment où Cyrene apparait pour la première fois. Je me demande
+      (bon je pense que s'il avait voulu l'éclater il l'aurait fait plus tôt mais bref). LAa fin, Phainon qui s'apprête à prendre en main son destin au moment où Cyrene apparait pour la première fois. Je me demande
       vraiment qui elle est ? Quelle importance elle a à l'échelle de la planète ? Peut être une émanatrice ? Un lien avec le souvenir si on prend en compte Mem ? Pour l'instant je me contenterai de dire qu'elle est MAGNIFIQUE.
     </p>
     <div class="flex justify-center pb-2">
@@ -79,7 +79,7 @@
     <p class="text-justify pb-2">
       Vous vous souvenez de ce qu'a dit Oronyx lors de notre première rencontre après avoir sorti l'appareil photo ? Et maintenant Herta ajoute que "Black Swan [..] disait que la jeune pionnère congelée étant sans doute
       piégée dans Amphoreus", j'ai plus aucun doute sur le fait que le passé de March soit lié à Amphoreus très fortement. Oronyx parle de "mère" car elle ressent l'énergie de Fuli à travers March ce qui peut ne signifier
-      qu'une chose c'est que <b>March est une Émanatrice</b>.
+      qu'une chose c'est que <b>March est une Émanatrice ou est liée à une Émanatrice</b>.
     </p>
     <div class="flex justify-center pb-2">
       <img src="img/oronyx.webp" alt="" class="w-[85%]">
@@ -89,7 +89,8 @@
       et qu'elle a permis de s'échapper d'Amphoreus. On sait qu'il y a 3 émanateurs du coup : Lygus (Érudition), Phainon (Destruction) et Cyrene (Souvenir). Ce qui confirme bien ce que disait Herta concernant les
       émanateurs d'Amphoreus. Et maintenant vous pourriez me dire "oui mais Cyrene est morte il y a des centaines d'années", sauf qu'on ne sait ni combien de temps March est resté dans son glaçon ni si le temps
       s'écoule de la même manière sur Amphoreus. Surtout que là Cyrene est réapparu et étrangement c'est exactement quand March est proche de Amphoreus, donc est-ce que Cyrene ne se serait pas servi de l'énergie
-      du corps de March pour renaître ? Je pense que March était son plan B.
+      du corps de March pour renaître ? Je pense que March était son plan B. <br>
+      Donc sois March est ell-même une émanatrice sois elle est le "clône" d'une émanatrice.
       <br>
       <br>
       Et si vous doutez que March est une émanatrice sachez que March (et Sampo) sont les deux seuls personnages non émanateurs que le pistolet de la station Herta n'arrive pas à évaluer, tout comme Acheron qui elle
@@ -122,7 +123,7 @@
     </ul>
     <p class="text-justify pb-2">
       Honnêtement je penche pour l'option 2, je pense que Phainon ne réalise pas ce qui l'attend et qu'il va devenir notre ennemi malgré lui. Et j'appuierai cette théorie des paroles de Herta qui dit la chose suivante
-      en parlant de Kephale. (Petite note : ça peut aussi être que la boule que Képhale porte soit la prison du Seigneur Ravageur mais j'y crois mal pour moi ça reste le fait que Képhale représente le pouvoir grandissant
+      en parlant de Kephale. (Petite note : ça peut aussi être le fait que la boule que Képhale porte soit la prison du Seigneur Ravageur mais j'y crois mal pour moi ça reste le fait que Képhale représente le pouvoir grandissant
       d'un émanateur).
     </p>
     <div class="flex justify-center pb-2">
@@ -132,14 +133,15 @@
       <br>
       Du coup avec tout ça on a que : Amphoreus est une simulation cachée (oui une simulation, à la fin de la quête les batiments redeviennent des illusions) hors de l'espace temps qui créé une planète de manière
       cyclique qui a pour seul avenir la destruction, et à force de répéter cette destruction le pouvoir du Seigneur Ravageur grandit jusqu'à éclore complètement. J'ai un pote qui disait "créer un émanateur à
-      partir de celui qui est scellé" mais je pense plutôt que c'est un pouvoir qui grandit au fur et à mesure des cycles et que cet émanateur enfermé que Lygus mentionnait n'était en réalité pas encore prêt.
+      partir de celui qui est scellé" mais je pense plutôt que c'est un pouvoir qui grandit au fur et à mesure des cycles, et que, cet émanateur enfermé que Lygus mentionnait n'était en réalité pas encore prêt.
     </p>
+
 
 
     <h3 class="font-bold text-lg pb-2" id="lygus">2.3 Lygus ou Rubert II : le véritable antagoniste ?</h3>
     <p class="text-justify pb-2">
       Rappellez-vous ces paroles de Screwllum <i>"Lygus pourrait être son opérateur... ou un autre Rubert"</i>, je pense qu'il nous a donné la clé de tout ça, et ça fait du sens. Lygus a avoué être un émanateur qui
-      a reçu <b>son</b> regard donc celui de Nous. Rubert était également un émanateur de l'Éruditon. Et la fin de cette quête nous montre que Lygus est intimement lié à la Chasse aux Flammes, il veut voir celle-ci
+      a reçu <b>son</b> regard donc celui de Nous. Rubert avait également susciter l'intérêt de Nous bien qu'on ait pas de preuve qu'ol soit un éménateur.. Et la fin de cette quête nous montre que Lygus est intimement lié à la Chasse aux Flammes, il veut voir celle-ci
       être complétée, il veut donc voir la naissance d'un Seigneur Ravageur.
     </p>
     <div class="flex justify-center pb-2">
@@ -153,6 +155,10 @@
     <div class="flex justify-center pb-2">
       <img src="img/nous.webp" alt="" class="w-[85%]">
     </div>
+    <p class="text-justify pb-2">
+      Ah aussi, pour ceux que ça intéresse, sachez que le wiki dit la chose suivante sur Rubert <i>"A computer dumped in a trash pile miraculously became self-aware, ultimately sparking a war that would engulf half
+      the cosmos"</i>. Donc en gros Rubert c'est littéralement Ultron mais en bien pire.
+    </p>
 
 
     <h3 class="font-bold text-lg pb-2">2.4 Qui est le Flame Reaver / Voleur de flammes</h3>
@@ -162,7 +168,7 @@
       <br>
       <br>
       1) Et si le FR était le plan B ? Ce que je veux dire c'est qu'il pourrait y avoir une autre entité qui a le pouvoir d'accueillir un éménateur. Si Phainon échoue, alors le FR s'en chargera et c'est
-      pourquoi il cherche toutes les flammes.
+      pourquoi il cherche toutes les flammes. 
       <br>
       2) Le FR ne serait pas là pour arrêter Phainon mais pour le pousser à accomplir sa mission. Pendant la quête on panique car il nous poursuit mais est-ce qu'en réalité il n'essaierait pas de nous pousser à notre
       objectif ? Il serait peut être celui qui s'assure que Phainon complète le cycle en devenant l'émanateur.
