Ajout d'un aperçu twitter

--- a/honkai/index.html
+++ b/honkai/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@Tritryi">
+  <meta name="twitter:title" content="Star Rail 3.3">
+  <meta name="twitter:description" content="Un petit retour sur la 3.3.">
+  <meta name="twitter:image" content="https://tritryi.github.io/honkai/img/hsr.webp">
 
   <link rel="icon" href="img/acheron_chibi_droite.webp">
 
@@ -168,7 +168,7 @@
       <br>
       <br>
       1) Et si le FR était le plan B ? Ce que je veux dire c'est qu'il pourrait y avoir une autre entité qui a le pouvoir d'accueillir un éménateur. Si Phainon échoue, alors le FR s'en chargera et c'est
-      pourquoi il cherche toutes les flammes. 
+      pourquoi il cherche toutes les flammes.
       <br>
       2) Le FR ne serait pas là pour arrêter Phainon mais pour le pousser à accomplir sa mission. Pendant la quête on panique car il nous poursuit mais est-ce qu'en réalité il n'essaierait pas de nous pousser à notre
       objectif ? Il serait peut être celui qui s'assure que Phainon complète le cycle en devenant l'émanateur.
