Gestion du responsibe

--- a/honkai/index.html
+++ b/honkai/index.html
@@ -10,8 +10,8 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@Tritryi">
-  <meta name="twitter:title" content="Star Rail 3.3">
-  <meta name="twitter:description" content="Un petit retour sur la 3.3.">
+  <meta name="twitter:title" content="Star Rail 3.3 : avis et théories">
+  <meta name="twitter:description" content="Un petit retour sur la 3.3 et ce que nous réserve la suite.">
   <meta name="twitter:image" content="https://tritryi.github.io/honkai/img/hsr.webp">
 
   <link rel="icon" href="img/acheron_chibi_droite.webp">
@@ -21,7 +21,7 @@
 
 <body>
 <main class="flex justify-center bg-[url(img/back.png)] bg-no-repeat bg-cover">
-  <div class="min-h-screen w-[50%] mt-4 mb-4 rounded-lg p-4 bg-gradient-to-l from-slate-400 to-slate-200">
+  <div class="min-h-screen w-[90%] md:w-[60%] mt-4 mb-4 rounded-lg p-4 bg-gradient-to-l from-slate-400 to-slate-200">
       <h1 class="font-extrabold text-center text-2xl pb-2">Star Rail 3.3 : avis et théories futures</h1>
     <p class="text-justify pb-2">
       Hello comme promis je vous propose de revenir sur la 3.3 de Star Rail : ce que cette 3.3 nous apprend
