--- a/honkai/index.html
+++ b/honkai/index.html
@@ -12,7 +12,7 @@
   <meta name="twitter:site" content="@Tritryi">
   <meta name="twitter:title" content="Star Rail 3.3 : avis et théories">
   <meta name="twitter:description" content="Un petit retour sur la 3.3 et ce que nous réserve la suite.">
-  <meta name="twitter:image" content="https://tritryi.github.io/honkai/img/hsr.webp">
+  <meta name="twitter:image" content="https://tritryi.github.io/honkai/img/version.webp">
 
   <link rel="icon" href="img/acheron_chibi_droite.webp">
 
