Correction des path et ajout d'un autre projet

--- a/honkai/index.html
+++ b/honkai/index.html
@@ -14,7 +14,7 @@
   <meta name="twitter:description" content="Un petit retour sur la 3.3 et ce que nous réserve la suite.">
   <meta name="twitter:image" content="https://tritryi.github.io/honkai/img/version.webp">
 
-  <link rel="icon" href="img/acheron_chibi_droite.webp">
+  <link rel="icon" href="../acheron_chibi_droite.webp">
 
   <meta name="theme-color" content="#fafafa">
 </head>
