--- a/TLOU/404.html
+++ b/TLOU/404.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="icon" href="../acheronerror.webp">
   <title>Page Not Found</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
@@ -37,9 +36,6 @@
       margin: 0 auto;
       width: 280px;
     }
-    img{
-      width: 20%;
-    }
 
     @media only screen and (max-width: 280px) {
 
@@ -58,9 +54,8 @@
 </head>
 
 <body>
-  <img src="img/acheronerror.webp" alt="Acheron Error">
-  <h1>Page introuvable</h1>
-  <p>Désolé, la page que vous tentez d'accéder n'existe pas :(</p>
+  <h1>Page Not Found</h1>
+  <p>Sorry, but the page you were trying to view does not exist.</p>
 </body>
 
 </html>
