--- a/TLOU/index.html
+++ b/TLOU/index.html
@@ -8,24 +8,16 @@
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" href="../acheron_chibi_droite.webp" sizes="any">
+  <link rel="icon" href="../acheron_chibi_droite.webp" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="../acheron_chibi_droite.webp">
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+<img src="../acheron_chibi_droite.webp" alt="">
   <script src="js/app.js"></script>
 
 </body>
