Correction d'un chemin

--- a/404.html
+++ b/404.html
@@ -58,7 +58,7 @@
 </head>
 
 <body>
-  <img src="img/acheronerror.webp" alt="Acheron Error">
+  <img src="./acheronerror.webp" alt="Acheron Error">
   <h1>Page introuvable</h1>
   <p>Désolé, la page que vous tentez d'accéder n'existe pas :(</p>
 </body>
